// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Column > matches snapshot 1`] = `
<div>
  <div
    class="w-full bg-white flex flex-col h-full overflow-hidden"
  >
    <div
      class="flex justify-between items-center px-4 py-3 border-b border-gray-200"
    >
      <h2
        class="text-lg font-medium text-gray-800"
      >
        Mad
      </h2>
      <div
        class="flex items-center space-x-2"
      >
        <button
          class="flex items-center text-blue-600 hover:text-blue-700 cursor-pointer"
        >
          <svg
            class="h-4 w-4"
            data-testid="arrow-up-down-icon"
          />
          <span
            class="sr-only"
          >
            Sort
          </span>
        </button>
        <button
          class="text-blue-600 hover:text-blue-700 cursor-pointer"
        >
          <svg
            class="h-4 w-4"
            data-testid="more-vertical-icon"
          />
          <span
            class="sr-only"
          >
            More options
          </span>
        </button>
      </div>
    </div>
    <div
      class="flex-grow overflow-y-auto p-3 space-y-3"
    >
      <div>
        Card Content
      </div>
    </div>
    <div
      class="p-3 border-t border-gray-200"
    >
      <button
        class="w-full p-2 text-sm text-blue-600 bg-gray-50 hover:bg-gray-100 rounded flex items-center justify-center cursor-pointer"
      >
        + Add a card
      </button>
    </div>
  </div>
</div>
`;

exports[`Column > matches snapshot when adding card 1`] = `
<div>
  <div
    class="w-full bg-white flex flex-col h-full overflow-hidden"
  >
    <div
      class="flex justify-between items-center px-4 py-3 border-b border-gray-200"
    >
      <h2
        class="text-lg font-medium text-gray-800"
      >
        Mad
      </h2>
      <div
        class="flex items-center space-x-2"
      >
        <button
          class="flex items-center text-blue-600 hover:text-blue-700 cursor-pointer"
        >
          <svg
            class="h-4 w-4"
            data-testid="arrow-up-down-icon"
          />
          <span
            class="sr-only"
          >
            Sort
          </span>
        </button>
        <button
          class="text-blue-600 hover:text-blue-700 cursor-pointer"
        >
          <svg
            class="h-4 w-4"
            data-testid="more-vertical-icon"
          />
          <span
            class="sr-only"
          >
            More options
          </span>
        </button>
      </div>
    </div>
    <div
      class="flex-grow overflow-y-auto p-3 space-y-3"
    >
      <div>
        Card Content
      </div>
    </div>
    <form
      class="p-3 border-t border-gray-200"
      data-testid="add-card-form"
    >
      <textarea
        class="w-full rounded-none border-none bg-gray-100 text-sm p-3 mb-2 resize-none focus:ring-0"
        placeholder="Type here... Press Enter to save."
        required=""
        rows="3"
      />
      <div
        class="flex justify-end space-x-2"
      >
        <button
          class="px-3 py-1.5 text-xs font-medium text-gray-600 bg-gray-100 rounded hover:bg-gray-200 cursor-pointer"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-3 py-1.5 text-xs font-medium bg-blue-500 text-white rounded hover:bg-blue-600 disabled:opacity-50 cursor-pointer"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Column > matches snapshot when sorted by votes 1`] = `
<div>
  <div
    class="w-full bg-white flex flex-col h-full overflow-hidden"
  >
    <div
      class="flex justify-between items-center px-4 py-3 border-b border-gray-200"
    >
      <h2
        class="text-lg font-medium text-gray-800"
      >
        Mad
      </h2>
      <div
        class="flex items-center space-x-2"
      >
        <button
          class="flex items-center text-blue-600 hover:text-blue-700 cursor-pointer"
        >
          <span
            class="text-xs mr-1"
          >
            Votes
          </span>
          <svg
            class="h-4 w-4"
            data-testid="arrow-up-down-icon"
          />
          <span
            class="sr-only"
          >
            Sort
          </span>
        </button>
        <button
          class="text-blue-600 hover:text-blue-700 cursor-pointer"
        >
          <svg
            class="h-4 w-4"
            data-testid="more-vertical-icon"
          />
          <span
            class="sr-only"
          >
            More options
          </span>
        </button>
      </div>
    </div>
    <div
      class="flex-grow overflow-y-auto p-3 space-y-3"
    >
      <div>
        Card Content
      </div>
    </div>
    <div
      class="p-3 border-t border-gray-200"
    >
      <button
        class="w-full p-2 text-sm text-blue-600 bg-gray-50 hover:bg-gray-100 rounded flex items-center justify-center cursor-pointer"
      >
        + Add a card
      </button>
    </div>
  </div>
</div>
`;
